--- a/.gitignore
+++ b/.gitignore
@@ -527,3 +527,7 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,aspnetcore
+
+
+# Custom ignore section
+Diagramms/*.png
