добавлены репозозиторий склада, подключение к БД

--- a/StoreHouse/WebApp/appsettings.json
+++ b/StoreHouse/WebApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=3306;Database=sh_main;User Id=storehouse_main;Password=storeHOUSE1234@;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
